<resources>
    <string name="app_name">AndroidProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Favourites</string>
    <string name="menu_slideshow">News</string>
    <string name="menu_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="auth">Authentication</string>
    <string name="auth_password">Password</string>
    <string name="auth_email">Email</string>
    <string name="auth_register">Register</string>

    <string name="add_game_to_favourites">"Game Added To Favourites"</string>
    <string name="remove_game_from_favourites">"Game has been removed"</string>
    <string name="game_exists">"Game already is in your favourites list"</string>
    <string name="empty_games">You have not favourite games</string>
    <string name="game_name">Name</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="login_btn">Login</string>

    <string name="tab_register">Register</string>
    <string name="tab_login">Login</string>
    <string name="deactivate_acc">Deactivate</string>
    <string name="settings">Settings</string>
</resources>