<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_auth">


    <fragment
        android:id="@+id/nav_auth"
        android:name="com.example.androidproject.ui.auth.AuthFragment"
        android:label="@string/auth"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.androidproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.example.androidproject.ui.favourites.FavouritesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.androidproject.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_game_view"
        android:name="com.example.androidproject.ui.game.GameInfoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_game_view" />

    <action
        android:id="@+id/action_auth_view_to_fragment_home"
        app:destination="@id/nav_home" />

    <action
        android:id="@+id/action_list_view_to_game_view"
        app:destination="@id/nav_game_view" />

    <action
        android:id="@+id/action_list_view_auth_view"
        app:destination="@id/nav_auth" />
</navigation>